templates/smtp-fake-server_template.yaml
---
# Source: smtp-fake-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-smtp-fake-server
  labels:
    app: smtp-fake-server
    chart: smtp-fake-server-0.1.0
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5080
      protocol: TCP
      name: http

    - port: 5081
      targetPort: 5081
      protocol: TCP
      name: api

    - port: 25
      targetPort: 25
      protocol: TCP
      name: smtp

  selector:
    app: smtp-fake-server
    release: release-name
---
# Source: smtp-fake-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-smtp-fake-server
  labels:
    app: smtp-fake-server
    chart: smtp-fake-server-0.1.0
    release: release-name
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp-fake-server
      release: release-name
  template:
    metadata:
      labels:
        app: smtp-fake-server
        chart: smtp-fake-server-0.1.0
        release: release-name
    spec:
      containers:
        - name: smtp-fake-server
          image: docker.io/someblackmagic/smtp-fake-server:latest
          imagePullPolicy: Always
---
# Source: smtp-fake-server/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-name-smtp-fake-server
  labels:
    app: smtp-fake-server
    chart: smtp-fake-server-0.1.0
    release: release-name
    heritage: Helm
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-smtp-fake-server
              servicePort: http
  tls:
